# tfs

./: .gitignore  Cargo.toml
data/: image.100  image.1000  image.20  image.5  image.50  image.tfs
shell_tests/: test_stat.sh
src/: lib.rs  main.rs
src/tfs/: constants.rs  disk.rs  fuse.rs  mod.rs  types.rs  utility.rs
src/tfs/types/: block.rs  data_ptr.rs  i_list.rs  inode.rs  mod.rs  read_iter.rs  write_iter.rs
