[package]
name = "disk"
version = "0.1.0"
authors = ["theorix"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3"
env_logger = "0.8.2"
time = "0.1.38"
libc = "0.2.84"
bincode   = "1.3.3"
serde     = { version = "1.0", features = ["derive"] }